[package]
name = "tokio-hang-repro"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.13" }
# tokio = { git = "https://github.com/tokio-rs/tokio", branch = "v0.2.x", features = ["full", "tracing"] }
tokio = { version = "0.2", features = ["full", "tracing"] }
hyperlocal = "0.7"
env_logger = "0.8.1"
log = "0.4.11"
tracing-subscriber = "0.2.14"