[package]
name = "tokio-hang-repro"
version = "0.1.0"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
hyper = { version = "0.14", features = ["stream"] }
tokio = { version = "1", features = ["full", "tracing"] }
hyperlocal = "0.8"
env_logger = "0.8.1"
log = "0.4.11"
tracing-subscriber = "0.2.14"